crates/compiler/test_syntax/tests/snapshots/pass/comment_in_backpassing_args.expr.formatted.roc
a,
    (M #
        c)
    <- t
a